ui alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,12 @@ body {
 .partents:hover {
   background-color: #1f2738;
 }
-.seniors {
+.project_heading {
   color: white;
   text-transform: capitalize;
   font-weight: 600;
 }
-.seniors:hover {
-  color: #48cbdc;
-}
+
 .engineerss {
   text-transform: capitalize;
   font-weight: 600;
@@ -87,7 +85,7 @@ body {
   width: 80px;
   background-color: white;
 }
-.presents {
+.label_heading {
   font-size: 13px;
   font-weight: 600;
   text-transform: uppercase;
